# emergencybd-webapp

./: .gitignore  install_requires.py  install_requires_with_poetry.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  constants.py  models.py
app/assets/css/: base.css  utilities.css
app/blueprints/: __init__.py
app/blueprints/authentication/: __init__.py  routes.py
app/blueprints/authentication/static/css/: login.css  register.css
app/blueprints/authentication/static/js/: register.js
app/blueprints/authentication/templates/: login.html  register.html
app/blueprints/core/: __init__.py  routes.py
app/blueprints/core/static/css/: index.css
app/blueprints/core/templates/: index.html
app/templates/: base.html
